--- a/src/assets/css/home/informationComp.css
+++ b/src/assets/css/home/informationComp.css
@@ -95,3 +95,63 @@
   color: darkred;
   font-weight: bold;
 }
+
+/* 打赏 */
+
+.erweima-box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
+}
+.erweima {
+  position: absolute;
+  /* top: 0; */
+  left: 0;
+  right: 0;
+  bottom: 30px;
+  display: flex;
+  padding: 5px;
+  background: rgba(0, 0, 0, .6);
+  border-radius: 14px;
+}
+
+.erweima > div > img {
+  width: 100%;
+  height: 80%;
+  padding: 15px;
+  vertical-align: middle;
+}
+.erweima > div > span {
+  display: flex;
+  justify-content: center;
+  background: rgba(0, 0, 0, .8);
+  padding: 5px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.wechat-box > span {
+  border-radius: 14px 0 0 14px;
+}
+.alipay-box > span {
+  border-radius: 0 14px 14px 0;
+}
+
+.erweima-btn {
+  padding: 3px 5px;
+  background: rgba(0, 0, 0, .6);
+  border-radius: 4px;
+  color: #fff
+}
+
+.erweima-box i {
+  color: orange;
+}
+
+.erweima-btn:hover {
+  background: rgba(0, 0, 0, .8);
+}
