--- a/src/assets/css/home/newCommentsItem.css
+++ b/src/assets/css/home/newCommentsItem.css
@@ -29,13 +29,10 @@
 .new-comments-content .new-comments-head img:hover {
   transform: rotate(360deg);
 }
-.new-comments-content:hover {
+.new-comments-content:hover a {
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.new-comments-content:hover .new-comments-head {
-  /* transform: scale(1.2); */
-}
 
 .new-comments-content .new-comments-nc {
   flex: 4;
@@ -52,17 +49,19 @@
   font-weight: bold;
 }
 
-.comments-tips {
+.comments-article-title {
   display: none;
   position: absolute;
   top: 18px;
   right: 108%;
+  /* 让文字不换行 */
+  white-space:nowrap;
   padding: 5px;
   color: white;
   background: #383838;
   z-index: 999;
 }
-.comments-tips::after {
+.comments-article-title::after {
   content: '';
   position: absolute;
   left: 100%;
@@ -73,6 +72,6 @@
   border-top: 8px solid transparent;
 }
 
-.new-comments-content:hover .comments-tips {
+.new-comments-content:hover .comments-article-title {
   display: block;
 }
