--- a/src/assets/css/common/common.css
+++ b/src/assets/css/common/common.css
@@ -68,3 +68,12 @@
     transform: scale3d(1,1,1);
   }
 }
+
+.fade-enter,
+.fade-leave-active {
+  opacity: 0;
+}
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 1s;
+}
