--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -27,11 +27,18 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   -webkit-tap-highlight-color: transparent; /* webkit是苹果浏览器引擎，tap点击，highlight背景高亮，color颜色，颜色用数值调节 */
   color: var(--color-text);
-  position: fixed;
-  top: 0px;
-  left: 0px;
   z-index: 999999;
   cursor: url('assets/cursor/mouse1.cur'), auto;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 1);
+  background-image: url('assets/img/scrollbar.png');
+  background-clip: border-box;
 }
 
 a {
