--- a/src/assets/css/home/article.css
+++ b/src/assets/css/home/article.css
@@ -15,13 +15,14 @@
 .datetime {
   position: absolute;
   top: -20px;
-  left: -12px;
+  left: -40px;
   width: 80px;
   height: 80px;
   background: rgba(255, 255, 255, .6);
   border-radius: 50%;
-  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.3);
   transition: .5s ease-in-out;
+  z-index: 1;
 }
 
 .datetime:hover {
@@ -114,7 +115,8 @@
   overflow: hidden;
   display: table-cell;
   vertical-align: middle;
-  padding: 15px;
+  padding: 6px;
+  margin-bottom: 0;
 }
 
 .article-content .article-img img {
@@ -134,12 +136,21 @@
   .article-content .article-title {
     font-size: 16px;
   }
+  .article .datetime {
+    left: -12px;
+  }
 }
 
 @media screen and (max-width: 768px) {
-  .article-content .article-tigs-list {
-    flex-direction: column;
+  .article .datetime {
+    border-radius: 4px;
+    height: 40px;
   }
+
+  .article .datetime .dm {
+    margin-top: 1px;
+  }
+
   .article-content .article-tigs-list li {
     margin-bottom: 3px;
   }
