修复打包后静态资源路径错误问题

--- a/src/assets/css/error/style.css
+++ b/src/assets/css/error/style.css
@@ -19,7 +19,7 @@
   bottom: 3%;
   display: flex;
   justify-content: center;
-  background: url("src/assets/img/p404.png"), #151729;
+  background: url("/image/error/p404.png"), #151729;
   border-radius: 6px;
 }
 
