--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -63,6 +63,17 @@ body::-webkit-scrollbar-thumb {
   background: rgb(255, 255, 255);
   background-clip: border-box;
 }
+/* Y轴的滚动条 */
+.scrollbar-y::-webkit-scrollbar  {
+  width: 8px;
+}
+
+.scrollbar-y::-webkit-scrollbar-thumb  {
+  border-radius: 4px;
+  box-shadow: inset 0 0 6px rgb(0, 0, 0);
+  background: rgb(255, 255, 255);
+  background-clip: border-box;
+}
 
 a {
   color: var(--color-text);
