--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -70,10 +70,23 @@ body::-webkit-scrollbar-thumb {
 
 .scrollbar-y::-webkit-scrollbar-thumb  {
   border-radius: 4px;
-  box-shadow: inset 0 0 6px rgb(0, 0, 0);
-  background: rgb(255, 255, 255);
+  box-shadow: inset 0 0 6px rgb(94, 85, 85);
+  background: rgb(94, 85, 85);
   background-clip: border-box;
 }
+
+/* 文本框Y轴的滚动条 */
+.text-scrollbar-y::-webkit-scrollbar  {
+  width: 6px;
+}
+
+.text-scrollbar-y::-webkit-scrollbar-thumb  {
+  border-radius: 4px;
+  box-shadow: inset 0 0 6px rgb(38, 37, 37);
+  background: rgb(38, 37, 37);
+  background-clip: border-box;
+}
+
 
 a {
   color: var(--color-text);
